# rust-web-template

./: README.md
infrastructure/: app.py
infrastructure/lib/: stack.py
server/: Cargo.toml  Dockerfile  deploy.sh
server/src/: api_handler.rs  main.rs  sqs_handler.rs
terraform/: api_gateway.tf  api_gateway_endpoints.tf  containers.tf  lambda.tf  main.tf  output.tf  queue.tf
