[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
aws_lambda_events = "0.15.1"
axum = "0.7.9"
axum-aws-lambda = "0.9.0"
hyper = "1.5.1"
lambda_http = { version="0.13.0", default-features=false, features=["apigw_http"] }
lambda_runtime = "0.13.0"
tokio = { version = "1", features = ["full"] }
tower = "0.5.2"
tower-http = {version="0.6.2", features = ["trace"]}
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

[features]
default = ["sqs_trigger"]
api_gateway_trigger = []
sqs_trigger = []
local_trigger = []
