[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
# Needed for both API and SQS
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

# Needed for API
axum = "0.7.9"
axum-aws-lambda = "0.9.0"
hyper = "1.5.1"
lambda_http = { version="0.13.0", default-features=false, features=["apigw_http"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5.2"
tower-http = {version="0.6.2", features = ["trace"]}

# Needed for SQS
aws_lambda_events = "0.15.1"
lambda_runtime = "0.13.0"

[[bin]]
name = "api_handler"
path = "src/api_handler.rs"

[[bin]]
name = "sqs_handler"
path = "src/sqs_handler.rs"

# I set local_trigger as default for ease of building locally.
# When building for the cloud, the docker image will replace it with the api_gateway_trigger.
[features]
default = ["local_trigger"]
api_gateway_trigger = []
local_trigger = []
